# dotfiles

./: .gitignore  .tmux.conf  .vimrc  .zshrc  Brewfile  Cargo.toml  Makefile  README.md  bootstrap.sh  checklist.md  install.sh
.config/alacritty/: alacritty.yml
.iterm2/: com.googlecode.iterm2.plist  profile.json
.zsh/: aliases  exports  fzf  golang  mac  options  prompt
dotfiles/: .alacritty.yml  .tmux.conf  .vimrc  .zshrc
dotfiles/.vim/: .netrwhist
dotfiles/.vim/colors/: hybrid_reverse.vim
dotfiles/.zsh/: completion  completion-local  exports  history  linux  local  mac  platform  syntax-highlighting
dotfiles/.zsh/data/: history
linux/: apt-packages.txt  install.sh
macOS/: Brewfile  Brewfile.lock.json  install.sh
macOS/dotfiles/.hammerspoon/: applicationLaunch.lua  autoclick.lua  defaults.lua  init.lua  windows.lua
platform/darwin/: Brewfile  README.md  install.sh  post-sync-hook.sh
platform/linux/: install.sh  post-sync-hook.sh
platform/macOS/: .tmux.platform.conf  .yabairc  Brewfile  README.md  install.sh  post-sync-hook.sh
platform/macOS/.hammerspoon/: applicationLaunch.lua  chunkwm.lua  init.lua  screens.lua  windows.lua  yabai.lua
platform/macOS/dotfiles/.hammerspoon/: applicationLaunch.lua  hotReload.lua  init.lua  windows.lua
platform/macOS/dotfiles/.iterm2/: com.googlecode.iterm2.plist
src/: install.rs  lib.rs  linux.rs  macos.rs  main.rs  process.rs  prompt.rs  sync.rs
src/command/: install.rs  install_linux.rs  install_macos.rs  mod.rs
src/util/: mod.rs  process.rs
work/: Brewfile
