[package]
name = "dotfiles"
version = "0.1.0"
authors = ["Kevin Rosendahl <kevindrosendahl@gmail.com>"]
edition = "2018"

[dependencies]
console = "0.7.0"
dialoguer = "0.3.0"
git2 = "0.7.5"
human-panic = "1.0.1"
indicatif = "0.10.1"
lazy_static = "1.2.0"
pam-auth = "0.5.0"
reqwest = "0.9.5"
structopt = "0.2.13"
which = "2.0.0"
